Changelog
=========

1.0 (unreleased)
----------------

- Sort local and parent content together.

- Sort before we convert to objects.

- Only show content that user has permissions to see on PROPFIND

- hide workflow and actions menu for proxied content

- monkey patch base action to not work with proxied content

- override folder contents

- add compiled js

- remove edit action and add proxied class to folder contents row

- #2643812: Return if the library doesn't have an intids id.
  [JL 2019-03-18]

- #2696850: Set correct meta_type for library and library_folder.
  [JL 2019-04-19]